block-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ctf-egress-block-policy
  namespace: ctf-challenges
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 169.254.0.0/16
              - 100.64.0.0/10
              - 192.0.0.0/24
              - 192.0.2.0/24
              - 198.18.0.0/15
              - 198.51.100.0/24
              - 203.0.113.0/24
              - 240.0.0.0/4
              - 255.255.255.255/32
              - 169.254.169.254/32
              - 169.254.169.250/32
              - 169.254.169.251/32
              - 169.254.169.249/32
  policyTypes:
    - Egress
